--- a/package.json
+++ b/package.json
@@ -1,54 +1,53 @@
 {
-  "name": "vue-sticky-sidebar",
-  "version": "1.0.4",
+  "name": "vue3-sticky-sidebar",
+  "version": "2.0.0",
   "author": {
-    "name": "Karan Yadav",
-    "email": "kyadav510@gmail.com",
-    "url": "https://github.com/alucard17"
+    "name": "zvizvi",
+    "url": "https://github.com/zvizvi"
   },
   "description": "Vue.js component implementing the sticky-sidebar library.",
   "repository": {
-    "url": "https://github.com/Alucard17/vue-sticky-sidebar.git",
+    "url": "https://github.com/zvizvi/vue3-sticky-sidebar.git",
     "type": "git"
   },
-  "homepage": "https://github.com/Alucard17/vue-sticky-sidebar#readme",
-  "main": "dist/vue-sticky-sidebar.ssr.js",
-  "browser": "dist/vue-sticky-sidebar.esm.js",
-  "module": "dist/vue-sticky-sidebar.esm.js",
-  "unpkg": "dist/vue-sticky-sidebar.min.js",
+  "homepage": "https://github.com/zvizvi/vue3-sticky-sidebar#readme",
+  "main": "dist/vue3-sticky-sidebar.ssr.js",
+  "browser": "dist/vue3-sticky-sidebar.esm.js",
+  "module": "dist/vue3-sticky-sidebar.esm.js",
+  "unpkg": "dist/vue3-sticky-sidebar.min.js",
   "files": [
     "dist/*",
     "src/**/*.vue"
   ],
   "scripts": {
     "serve": "vue-cli-service serve dev/serve.js",
-    "build": "cross-env NODE_ENV=production rollup --config build/rollup.config.js",
-    "build:ssr": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format cjs",
-    "build:es": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format es",
-    "build:unpkg": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format iife"
+    "build": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --bundleConfigAsCjs",
+    "build:ssr": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format cjs --bundleConfigAsCjs",
+    "build:es": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format es --bundleConfigAsCjs",
+    "build:unpkg": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format iife --bundleConfigAsCjs"
   },
   "dependencies": {
-    "sticky-sidebar-v2": "https://github.com/Alucard17/sticky-sidebar-v2"
+    "sticky-sidebar-v2": "https://github.com/blixhavn/sticky-sidebar-v2"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
-    "@rollup/plugin-alias": "^2.2.0",
-    "@rollup/plugin-commonjs": "^11.1.0",
-    "@rollup/plugin-replace": "^2.3.2",
-    "@vue/cli-plugin-babel": "^4.3.1",
-    "@vue/cli-service": "^4.3.1",
-    "cross-env": "^7.0.2",
-    "minimist": "^1.2.5",
-    "rollup": "^2.7.3",
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "@rollup/plugin-alias": "^4.0.3",
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-replace": "^5.0.2",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
+    "@vue/compiler-sfc": "^3.2.47",
+    "cross-env": "^7.0.3",
+    "minimist": "^1.2.8",
+    "rollup": "^3.14.0",
     "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-terser": "^5.3.0",
-    "rollup-plugin-vue": "^5.1.6",
-    "vue": "^2.6.11",
-    "vue-template-compiler": "^2.6.11"
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-vue": "^6.0.0",
+    "vue": "^3.2.47"
   },
   "peerDependencies": {
-    "vue": "^2.6.11"
+    "vue": "^3.2.47"
   },
   "engines": {
     "node": ">=10"
